[package]
name = "puffin-imgui"
version = "0.8.0"
authors = ["Embark <opensource@embark-studios.com>"]
description = "ImGui GUI bindings for the Puffin profiler"
license = "MIT OR Apache-2.0"
edition = "2018"
homepage = "https://github.com/EmbarkStudios/puffin"
repository = "https://github.com/EmbarkStudios/puffin"
readme = "README.md"
categories = ["development-tools::profiling", "gui"]
keywords = ["profiler", "instrumentation", "gamedev"]
include = [ "**/*.rs", "Cargo.toml"]

[lib]
doctest = false

[dependencies]
imgui = { git = "https://github.com/dbr/imgui-rs.git", rev = "68e2d4810cb44f87a6117567ca1b8b605f214d6e" }
imgui-sys = { git = "https://github.com/dbr/imgui-rs.git", rev = "68e2d4810cb44f87a6117567ca1b8b605f214d6e" }
puffin = { version = "0.5.0", path = "../puffin" }
serde = { version = "1", features = ["derive"] }
