[package]
name = "puffin-imgui"
version = "0.8.0"
authors = ["Embark <opensource@embark-studios.com>"]
description = "ImGui GUI bindings for the Puffin profiler"
license = "MIT OR Apache-2.0"
edition = "2018"
homepage = "https://github.com/EmbarkStudios/puffin"
repository = "https://github.com/EmbarkStudios/puffin"
readme = "README.md"
categories = ["development-tools::profiling", "gui"]
keywords = ["profiler", "instrumentation", "gamedev"]
include = [ "**/*.rs", "Cargo.toml"]

[lib]
doctest = false

[dependencies]
imgui = { git = "https://github.com/dbr/imgui-rs.git", rev = "168f20ec767052f18bc9b669a036d71a7bcbae75" }
imgui-sys = { git = "https://github.com/dbr/imgui-rs.git", rev = "168f20ec767052f18bc9b669a036d71a7bcbae75" }
puffin = { version = "0.5.0", path = "../puffin" }
serde = { version = "1", features = ["derive"] }
